# human_typer

./: .gitignore  LICENSE  README.md  pyproject.toml  setup.cfg  setup.py
.github/workflows/: publish.yml
src/human_typer/: __init__.py  human_typer.py  keyboard_helper.py
